--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Running through space</h1>
 		</header>
 			<section id="content">
-				<canvas id="Starfield" data-processing-sources="Starfield.pde">
+				<canvas id="Starfield" data-processing-sources="Starfield_project.pde, Particle">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Just watch the stars fly bye
 	    </footer>
 	</body>
 </html>
